<resources>
    <string name="app_name">EsTo-Do-easy</string>
    <string name="task_title_default">Title</string>
    <string name="menu_item_list_home_label">Home</string>
    <string name="menu_item_list_schedule_label">Schedule</string>
    <string name="menu_item_list_dash_label">Dashboard</string>
    <string name="menu_item_list_planner_label">Planner</string>
    <string name="menu_item_list_profile_label">Profile</string>
    <string name="study_techniques_label">Study technique</string>
    <string name="study_techniques_item_description">Description</string>
    <string name="home_study_techniques_label">Study Technique</string>
    <string name="study_techniques_item_group_label">Group</string>
    <string name="task_item_time_elapsed_default">00:00</string>
    <string name="study_techniques_item_selector_label">Change</string>
    <string name="suggested_task_label">Suggested Task</string>
    <string name="next_tasks_item_label">Next Tasks</string>
    <string name="default_group">Group</string>
    <string name="task_details_group_label">Group</string>
    <string name="task_details_dependencies_label">Dependencies</string>
    <string name="study_techniques_item_default">Pomodoro</string>
    <string name="task_list_item_icon_description">Show task details</string>
    <string name="study_techniques_item_icon_description">Change study technique</string>
    <string name="task_item_time_elapsed_icon_description">Task elapsed time</string>
    <string name="study_technique_item_play_description">Start study technique timer</string>
    <string name="task_item_play_description">Start task timer</string>
    <string name="menu_item_list_perfil_label">Perfil</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_text">Login</string>
    <string name="login_skip_login_text">Skip</string>
    <string name="login_forgot_password_text">Forgot your Password?</string>
    <string name="login_login_with_google_account_text">Login with Google Account</string>
    <string name="configure_pomodoro_button">Configure Pomodoro</string>
    <string name="pomodoro_focus_default_time">24:59</string>
    <string name="pomodoro_action_pause">Pause</string>
    <string name="sound_slider_icon">sound slider icon</string>
    <string name="profile_email_text_base">Your@Email.com</string>
    <string name="profile_username_text_base">Username</string>
    <string name="profile_sync_google_calendar_button_text">Sync with Google Calendar</string>
    <string name="profile_achievements_button_text">Achievements</string>
    <string name="profile_sign_out_text">sign out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_setting_about_text">About</string>
    <string name="profile_feedback_button_text">Send Feedback</string>
    <string name="profile_setting_about_creators_text">Developed by: Fabio, Jonathan, Michelle and Vitor</string>
    <string name="profile_settings_refer_text_button">Refer a Friend</string>
    <string name="profile_settings_airplane_mode_text">Airplane Mode</string>
    <string name="profile_settings_haptic_feedback">Haptic Feedback</string>
    <string name="profile_settings_24_hours_clock">Use 24 hours Clock</string>
    <string name="profile_settings_theme_bottom">Theme</string>
    <string name="profile_settings_pomodoro_settings">Pomodoro Settings</string>
    <string name="profile_settings_notifications_switch">Notifications</string>
    <string name="planning_title">Task group</string>
    <string name="planning_tasks_title">hint</string>
    <string name="planning_details_title">Tasks</string>
    <string name="planning_details_group_name">Group</string>
    <string name="planning_edit_text">Edit</string>
    <string name="planning_list_item_title_default">Project name</string>
    <string name="planning_list_item_name_task_default">Task name</string>
    <string name="profile_settings_button_text">Settings</string>
    <string name="fragment_profile_achievements_text_default">Achievement</string>
    <string name="achievement_detail_icon">Achievement Detail Icon</string>
    <string name="planning_details_title_default">Task name</string>
    <string name="planning_task_details_date_start_hint">Start date</string>
    <string name="planning_task_details_date_end_hint">Finish date</string>
    <string name="planning_task_details_date_due_hint">Due date</string>
    <string name="planning_task_details_mult_line_task_details">Create ToDo application!</string>
    <string name="planning_task_details_name_project_label_default">Project</string>
    <string name="planning_task_details_radio_group_level_activity_easy">Easy</string>
    <string name="planning_task_details_radio_group_level_activity_medium">Medium</string>
    <string name="planning_task_details_radio_group_level_activity_hard">Hard</string>
    <string name="planning_task_details_activity_level_label">Difficulty level</string>
    <string name="planning_task_details_priority_level_label">Priority level</string>
    <string name="planning_task_details_radio_group_level_priority_low">Low</string>
    <string name="planning_task_details_radio_group_level_priority_medium">Medium</string>
    <string name="planning_task_details_radio_group_level_priority_high">High</string>
    <string name="report_button_text_daily">Daily</string>
    <string name="report_button_text_weekly">Weekly</string>
    <string name="report_button_text_monthly">Monthly</string>
    <string name="suggested_task_item_no_content_label">No suggested task item yet</string>
    <string name="next_tasks_item_no_content_label">No next tasks data yet</string>
    <string name="task_details_title_label">Title</string>
    <string name="task_group_default">Group</string>
    <string name="task_details_date_started_label">Start date</string>
    <string name="date_default">01/01/2022</string>
    <string name="task_details_date_finished_label">Finish date</string>
    <string name="task_details_date_due_label">Due date</string>
    <string name="task_details_priority_label">Priority</string>
    <string name="task_priority_default">MEDIUM</string>
    <string name="task_details_difficulty_label">Difficulty</string>
    <string name="task_difficulty_default">MEDIUM</string>
    <string name="task_list_item_alert_description">Task should be done before the current one</string>
    <string name="task_item_alert_description">Alert</string>
    <string name="pomodoro_focus_time_label">Focus</string>
    <string name="pomodoro_focus_time_defaut_value">25 min</string>
    <string name="pomodoro_shortbreak_time">Short Break</string>
    <string name="pomodoro_shortbreak_time_value">5 min</string>
    <string name="pomodoro_longbreak_time">Long Break</string>
    <string name="pomodoro_longbreak_time_value">15 min</string>
    <string name="textview_pomodoro_sound_options">Sounds</string>
    <string name="pomodoro_configure_timer_ticktack">Tick Tack</string>
    <string name="pomodoro_configure_end_focus_sound">End of a Focus Session</string>
    <string name="pomodoro_configure_end_break_sound">End of a Break Session</string>
    <string name="textview_pomodoro_general">General</string>
    <string name="pomodoro_configure_general_focus_start">Automatic Start Focus Session</string>
    <string name="pomodoro_configure_general_break_start">Automatic Start a Break Session</string>
    <string name="pomodoro_skip">Skip</string>
    <string name="pomodoro_shortbreak">4:59</string>
    <string name="pomodoro_longbreak">14:59</string>
    <string name="pomodoro_end_session">00:00</string>
    <string name="pomodoro_focus">24:59</string>
    <string name="skip_break_label">Skip Break</string>
    <string name="pomodoro_start_new_session">Start new session</string>
    <string name="pomodoro_pause_focus">Pause</string>
    <string name="new_group_task_title">Task Group Name</string>
    <string name="new_group_task_name_hint">Task Group Name</string>
    <string name="action_save_title">Save</string>
    <string name="planning_task_details_task_name_hint">Task Name</string>
    <string name="planning_details_project_name_hint">Project Name</string>
    <string name="profile_home_sign_in">SIGN IN</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="task_details_menu_operation_error">Error on executing selected menu operation.</string>
    <string name="task_remove_dialog_title">Are you sure?</string>
    <string name="task_remove_dialog_content">Are you sure you want to delete this task? This operation can not be undone.</string>
    <string name="task_remove_dialog_confirm">OK</string>
    <string name="task_remove_dialog_cancel">Cancel</string>
    <string name="task_details_delete_error">Error on deleting task.</string>
    <string name="group_delete_error">Error on deleting task.</string>
    <string name="add_task_floating_button">Add task floating button</string>
    <string name="title_delete_group_confirmation">Delete group?</string>
    <string name="message_delete_title_confirmation">Are you sure want to delete the group? This operation cannot be undone.</string>
    <string name="cancel_delete_group_label">Cancel</string>
    <string name="confirm_delete_group_label">Confirm</string>
    <string name="list_task_remove_group_title">Delete</string>
    <string name="time_format_pomodoro">%02d:%02d</string>
    <string name="time_format">%02d:%02d:%02d</string>
    <string name="return_pause">Return</string>
    <string name="timer_defalt_value">00:00:00</string>
    <string name="drop_down_item_project_name">Choose a Project Name</string>
    <string name="timer_default_value">00:00:00</string>
    <string name="stop">Stop</string>
    <string name="pomodoro_finish">Finish</string>
    <string name="action_done">Finish</string>
    <string name="task_details_finish_error">Finish</string>
    <string name="task_details_default">Details</string>
    <string name="select_tasks_dependencies">Select Tasks Dependencies</string>
    <string name="task_details_time_label_default">Time Elapsed</string>
    <string name="task_details_time_default">0</string>
    <string name="task_details_status_label">Status</string>
    <string name="task_details_status_default">TODO</string>
    <string name="timer_select">Timer Select</string>
    <string name="sort_by">Sort by</string>
    <string name="default_sort">Default sort</string>
    <string name="list_task_edit_group_title">Edit</string>
    <string name="dashboard_data_error">Error on retrieving data</string>
    <string name="chart_time_spent_per_group_label">Time spent per group (minutes)</string>
    <string name="chart_top_tasks_time_spent_label">Top 5 time spent tasks (minutes)</string>
    <string name="chart_unknown">Unknown</string>
    <string name="chart_others">Others</string>
</resources>

