<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_list_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/menu_item_list_home_label" />

    <item
        android:id="@+id/menu_item_list_schedule"
        android:icon="@drawable/ic_action_schedule"
        android:title="@string/menu_item_list_schedule_label" />

    <item
        android:id="@+id/menu_item_list_dash"
        android:icon="@drawable/ic_action_dash"
        android:title="@string/menu_item_list_dash_label" />
    <item
        android:id="@+id/menu_item_list_planner"
        android:icon="@drawable/ic_action_planner"
        android:title="@string/menu_item_list_planner_label" />

    <item
        android:id="@+id/menu_item_list_profile"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/menu_item_list_profile_label" />
</menu>