<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ScrollViewCount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView

                android:id="@+id/login_name_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="16dp"
                android:text="@string/app_name"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.10" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_login_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:padding="16dp"
                app:layout_constraintLeft_toLeftOf="@id/login_name_app"
                app:layout_constraintTop_toBottomOf="@id/login_name_app">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_hint"
                    android:maxLines="1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_login_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="16dp"
                app:layout_constraintLeft_toLeftOf="@id/login_name_app"
                app:layout_constraintTop_toBottomOf="@id/layout_login_email_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:padding="16dp"
                android:text="@string/login_login_text"
                app:layout_constraintLeft_toLeftOf="@id/login_name_app"
                app:layout_constraintTop_toBottomOf="@id/layout_login_password_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_skip_login"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="12dp"
                android:text="@string/login_skip_login_text"
                android:textSize="11sp"
                app:layout_constraintRight_toRightOf="@id/login_login_button"
                app:layout_constraintTop_toBottomOf="@id/login_login_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_forgot_password"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/login_forgot_password_text"
                android:textSize="11sp"
                app:layout_constraintLeft_toLeftOf="@id/login_login_button"
                app:layout_constraintTop_toBottomOf="@id/login_login_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_google_login_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:padding="16dp"
                android:text="@string/login_login_with_google_account_text"
                app:icon="@drawable/ic_icons8_google"
                app:layout_constraintLeft_toLeftOf="@id/login_forgot_password"
                app:layout_constraintTop_toBottomOf="@id/login_forgot_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>